--- a/app/components/InfoModal/InfoModal.module.scss
+++ b/app/components/InfoModal/InfoModal.module.scss
@@ -1,5 +1,5 @@
 .container {
-  position: absolute;
+  position: fixed;
   inset: 0;
   background-color: var(--primary);
   z-index: 10;
